trying to get config right