@@ -35,7 +35,91 @@
       <version>1.6.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>5.3.19</version>
+      <scope>test</scope>
+    </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.querydsl</groupId>
+      <artifactId>querydsl-sql</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.querydsl</groupId>
+      <artifactId>querydsl-sql-spring</artifactId>
+      <version>4.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
+  <pluginManagement>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>${maven-surefire-plugin.version}</version>
+      <configuration>
+        <argLine>
+          -Xms128m -Xmx3021m -Dfile.encoding=UTF-8 --illegal-access=permit --illegal-access=warn
+        </argLine>
+        <junitArtifactName>junit:junit</junitArtifactName>
+        <testFailureIgnore>false</testFailureIgnore>
+        <forkCount>1</forkCount>
+        <reuseForks>false</reuseForks>
+        <parallel>classes</parallel>
+        <threadCount>1</threadCount>
+        <useSystemClassLoader>true</useSystemClassLoader>
+        <systemPropertyVariables>
+          <masterDbSchema>masterDb_${surefire.forkNumber}</masterDbSchema>
+        </systemPropertyVariables>
+      </configuration>
+      <executions>
+        <execution>
+          <id>default-test</id>
+          <phase>test</phase>
+          <goals>
+            <goal>test</goal>
+          </goals>
+          <configuration>
+            <skip>false</skip>
+            <includes>
+              <include>**/Test*.java</include>
+            </includes>
+          </configuration>
+        </execution>
+      </executions>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.maven.surefire</groupId>
+          <artifactId>surefire-junit47</artifactId>
+          <version>3.0.0-M3</version>
+        </dependency>
+        <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>${org.junit.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm</artifactId>
+          <version>6.2</version>
+        </dependency>
+      </dependencies>
+    </plugin>
+  </pluginManagement>
 
 </project>
